--- a/package.json
+++ b/package.json
@@ -1,41 +1,47 @@
 {
-  "name": "opus",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/miriam30/Opus.git"
-  },
-  "author": "coolpeepsmasterdevelopers",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/miriam30/Opus/issues"
-  },
-  "homepage": "https://github.com/miriam30/Opus#readme",
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "jquery": "^3.3.1",
-    "mongoose": "^5.0.12",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.17.3",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^2.2.1",
-    "webpack-cli": "^2.0.13"
-  }
+    "name": "opus",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "react-dev": "webpack -d --watch",
+        "start": "nodemon server/index.js",
+        "start-dev": "nodemon server/index.js",
+        "prod": "NODE_ENV=production node server/index.js",
+        "postinstall": "webpack -p"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/miriam30/Opus.git"
+    },
+    "author": "coolpeepsmasterdevelopers",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/miriam30/Opus/issues"
+    },
+    "homepage": "https://github.com/miriam30/Opus#readme",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "cors": "^2.8.4",
+        "express": "^4.16.3",
+        "jquery": "^3.3.1",
+        "mongoose": "^5.0.12",
+        "morgan": "^1.9.0",
+        "mysql": "^2.15.0",
+        "nodemon": "^1.17.3",
+        "react": "^16.3.0",
+        "react-dom": "^16.3.0"
+    },
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "webpack": "^2.2.1",
+        "webpack-dev-server": "2.9.4",
+        "webpack-manifest-plugin": "1.3.2",
+        "webpack-cli": "^2.0.13"
+    }
 }
