--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "start-dev": "node .-node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "prod": "NODE_ENV=production node server/index.js",
+    "postinstall": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.0.12",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "nodemon": "^1.17.3",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
@@ -35,7 +39,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^2.2.1",
-    "webpack-cli": "^2.0.13"
+    "webpack": "3.5.5",
+    "webpack-dev-server": "2.9.4",
+    "webpack-manifest-plugin": "1.3.2"
   }
 }
